--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -17,7 +17,7 @@
 		<PackageVersion Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
 		<PackageVersion Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.2" />
 		<PackageVersion Include="Microsoft.UI.Xaml" Version="2.7.1" />
-		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
+		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 		<PackageVersion Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
 		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageVersion Include="Refit" Version="6.3.2" />
@@ -70,7 +70,7 @@
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 		<PackageVersion Include="Newtonsoft.Json" Version="13.0.2" />
 		<PackageVersion Include="NUnit" Version="3.13.3" />
-		<PackageVersion Include="NUnit3TestAdapter" Version="4.3.0-alpha-net7.4" />
+		<PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
 		<PackageVersion Include="NunitXml.TestLogger" Version="3.0.131" />
 		<PackageVersion Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
 		<PackageVersion Include="Xamarin.UITest" Version="4.1.2" />
