--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -87,7 +87,7 @@
 
 	<ItemGroup>
 		<None Include="build\Package.props" Pack="true" PackagePath="buildTransitive\$(PackageId).props" Condition="exists('build\Package.props')"/>
-		<None Include="build\Package.targets" Pack="true" PackagePath="buildTransitive\$(PackageId).targets" Condition="exists('build\Pacakge.targets')"/>
+		<None Include="build\Package.targets" Pack="true" PackagePath="buildTransitive\$(PackageId).targets" Condition="exists('build\Package.targets')"/>
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='xamarinmac20'">
