--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -41,18 +41,18 @@
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
 		<PackageVersion Include="Uno.Extensions.Markup.Generators" Version="1.0.0-dev.166" />
 		<PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
-		<PackageVersion Include="Uno.Toolkit" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.Toolkit.UI" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.UI" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-feature.5x.655"/>
-		<PackageVersion Include="Uno.UI.MSAL"  Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Runtime.WebAssembly" Version="5.0.0-feature.5x.655" />
+		<PackageVersion Include="Uno.Toolkit" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.Toolkit.UI" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.UI" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1148"/>
+		<PackageVersion Include="Uno.UI.MSAL"  Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Runtime.WebAssembly" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.14.0-dev.54" />
-		<PackageVersion Include="Uno.WinUI" Version="5.0.0-feature.5x.655" />
+		<PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="Uno.WinUI.Markup" Version="4.6.0-dev.16" />
-		<PackageVersion Include="Uno.WinUI.MSAL" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.Runtime.WebAssembly" Version="5.0.0-feature.5x.655" />
+		<PackageVersion Include="Uno.WinUI.MSAL" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.Runtime.WebAssembly" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="coverlet.collector" Version="3.1.2" />
 		<PackageVersion Include="xunit" Version="2.4.1" />
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.4.1" />
