--- a/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Mobile/Uno.Extensions.RuntimeTests.Mobile.csproj
+++ b/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Mobile/Uno.Extensions.RuntimeTests.Mobile.csproj
@@ -30,11 +30,11 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
-		<PackageReference Include="Uno.WinUI" Version="5.0.0-feature.5x.655" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-feature.5x.655" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-feature.5x.655" />
+		<PackageReference Include="Uno.WinUI" Version="5.0.0-dev.1148" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1148" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1148" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-feature.5x.655" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1148" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="'$(TargetFramework)'=='net7.0-android'">
