--- a/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Skia.Wpf/Uno.Extensions.RuntimeTests.Skia.Wpf.csproj
+++ b/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Skia.Wpf/Uno.Extensions.RuntimeTests.Skia.Wpf.csproj
@@ -26,10 +26,10 @@
 	<ItemGroup>
 		<PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="5.0.0-feature.5x.655" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-feature.5x.655" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-feature.5x.655" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-feature.5x.655" />
+		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="5.0.0-dev.1148" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1148" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1148" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-dev.1148" />
 		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 	</ItemGroup>
