--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -37,22 +37,22 @@
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-		<PackageVersion Include="Uno.Material" Version="2.15.0-feature.5x.9" />
-		<PackageVersion Include="Uno.Material.WinUI" Version="2.15.0-feature.5x.9" />
+		<PackageVersion Include="Uno.Material" Version="3.0.0-dev.252" />
+		<PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.252" />
 		<PackageVersion Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
-		<PackageVersion Include="Uno.Toolkit.UI" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.10.0-feature.5x.25" />
-		<PackageVersion Include="Uno.UI" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.MSAL" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.RemoteControl" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Skia.Linux.FrameBuffer" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.UI.WebAssembly" Version="5.0.0-feature.5x.655" />
+		<PackageVersion Include="Uno.Toolkit.UI" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.UI" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.MSAL" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.RemoteControl" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Skia.Linux.FrameBuffer" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.UI.WebAssembly" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="Uno.UITest" Version="1.1.0-dev.59" />
 		<PackageVersion Include="Uno.UITest.Selenium" Version="1.1.0-dev.59" />
 		<PackageVersion Include="Uno.UITest.Xamarin" Version="1.1.0-dev.59" />
@@ -60,13 +60,13 @@
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.12" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.12" />
-		<PackageVersion Include="Uno.WinUI" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.MSAL" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-feature.5x.655" />
-		<PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.0-feature.5x.655" />
+		<PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.MSAL" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 		<PackageVersion Include="Newtonsoft.Json" Version="13.0.2" />
 		<PackageVersion Include="NUnit" Version="3.13.3" />
