--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Wasm.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Wasm.csproj
@@ -10,7 +10,9 @@
 	<ItemGroup>
 		<PackageReference Include="Uno.UI.Runtime.WebAssembly" />
 	</ItemGroup>
+
 	<ItemGroup>
+		<ProjectReference Include="..\Uno.Extensions.Core.UI\Uno.Extensions.Core.UI.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Storage.UI\Uno.Extensions.Storage.UI.csproj" />
 	</ItemGroup>
 
