--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.csproj
@@ -21,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Uno.Extensions.Core.UI\Uno.Extensions.Core.UI.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Storage.UI\Uno.Extensions.Storage.UI.csproj" />
 	</ItemGroup>
 
