--- a/src/Uno.Extensions.Navigation.Toolkit/Uno.Extensions.Navigation.Toolkit.UI.csproj
+++ b/src/Uno.Extensions.Navigation.Toolkit/Uno.Extensions.Navigation.Toolkit.UI.csproj
@@ -10,7 +10,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Uno.Extensions.Toolkit.UI\Uno.Extensions.Toolkit.UI.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Navigation.UI\Uno.Extensions.Navigation.UI.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Core.UI\Uno.Extensions.Core.UI.csproj" />
 	</ItemGroup>
@@ -27,14 +26,10 @@
 	MSBuild Extras excludes .xr.xml layout files from referenced libraries at
 	https://github.com/novotnyllc/MSBuildSdkExtras/blob/252ba9af3300db98fde54644316567f0c6426e1e/Source/MSBuild.Sdk.Extras/Build/Workarounds.targets#L94
 	-->
-	<Target Name="FixXrXml"
-						AfterTargets="_SdkIncludeWindowsLibraryLayoutItems"
-						Condition="'$(GenerateLibraryLayout)' == 'true' AND '$(SDKIdentifier)' == 'Windows'">
+	<Target Name="FixXrXml" AfterTargets="_SdkIncludeWindowsLibraryLayoutItems" Condition="'$(GenerateLibraryLayout)' == 'true' AND '$(SDKIdentifier)' == 'Windows'">
 		<Message Importance="high" Text="Applying fix for missing .xr.xml files" />
 		<ItemGroup>
-			<TfmSpecificPackageFile Include="@(_LayoutFile)"
-                              Condition="'$(ProjectName)' != '%(_LayoutFile.ProjectName)'"
-                              PackagePath="lib\$(TargetFramework)\%(_LayoutFile.TargetPath)"/>
+			<TfmSpecificPackageFile Include="@(_LayoutFile)" Condition="'$(ProjectName)' != '%(_LayoutFile.ProjectName)'" PackagePath="lib\$(TargetFramework)\%(_LayoutFile.TargetPath)" />
 		</ItemGroup>
 	</Target>
 </Project>
