--- a/src/Uno.Extensions.Core.Generators/Uno.Extensions.Core.Generators.csproj
+++ b/src/Uno.Extensions.Core.Generators/Uno.Extensions.Core.Generators.csproj
@@ -29,7 +29,7 @@
 	<ItemGroup>
 		<Compile Include="..\Uno.Extensions.Core\_Compat\**\*.cs" Link="_Compat\%(RecursiveDir)%(Filename)%(Extension)" />
 
-		<Compile Include="..\Uno.Extensions.Core\Edition\**\*Attribute.cs" Link="Attributes\Edition\%(RecursiveDir)%(Filename)%(Extension)" />
+		<Compile Include="..\Uno.Extensions.Core\Edition\DefaultConstructorAttribute.cs" Link="Attributes\Edition\%(RecursiveDir)%(Filename)%(Extension)" />
 		<Compile Include="..\Uno.Extensions.Core\Equality\**\*Attribute.cs" Link="Attributes\Equality\%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
