--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -31,7 +31,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-        <PackageReference Include="Microsoft.Net.Compilers.Toolset" VersionOverride="4.7.0-2.final">
+        <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.7.0-2.final">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
