chore: added External Maui lib to the Maui project

--- a/samples/MauiProjects/MauiApp1/MauiApp1.csproj
+++ b/samples/MauiProjects/MauiApp1/MauiApp1.csproj
@@ -52,4 +52,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\MauiControlsExternal\MauiControlsExternal.csproj" />
+	</ItemGroup>
+
 </Project>
