fix: Update to net7.0 after rebase
(cherry picked from commit 7e8a43deb377c9c707ecfd988e7401fedcde49d9)

--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -7,8 +7,8 @@
 		<DebugSymbols>True</DebugSymbols>
 
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-
-		<NoWarn>$(NoWarn);CA1416;NU1507</NoWarn>
+		<WarningsNotAsErrors>NU1009</WarningsNotAsErrors>
+		<NoWarn>$(NoWarn);CA1416;NU1507;NU1009</NoWarn>
 
 		<DefaultLanguage>en</DefaultLanguage>
 
