--- a/testing/TestHarness/TestHarness.Core/TestHarness.Core.csproj
+++ b/testing/TestHarness/TestHarness.Core/TestHarness.Core.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <!-- Netstandard2.0 required for uwp support -->
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
