--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -6,16 +6,16 @@
 		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-		<PackageVersion Include="Uno.Material.WinUI" Version="2.6.1" />
+		<PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.262" />
 		<PackageVersion Include="Uno.Dsp.Tasks" Version="1.1.0" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.0.4" />
-		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.0.4" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.1.0-dev.24" />
+		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.1.0-dev.24" />
 		<PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.13" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-		<PackageVersion Include="Uno.WinUI" Version="4.9.20" />
-		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.9.20" />
+		<PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.1148" />
+		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1148" />
 		<PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
-		<PackageVersion Include="Telerik.UI.for.Maui" Version="5.1.0" />
+		<!--<PackageVersion Include="Telerik.UI.for.Maui" Version="5.1.0" />-->
 	</ItemGroup>
 </Project>
