chore: added flag to control when to use Telerik or not
(cherry picked from commit ffea0deee15b7b20667c7cf2eeffb22819ff7c3c)

--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -17,6 +17,7 @@
 		<IsMac>false</IsMac>
 		<IsMacCatalyst>false</IsMacCatalyst>
 		<IsWinAppSdk>false</IsWinAppSdk>
+		<_UseTelerik>false</_UseTelerik>
 	</PropertyGroup>
 
 	<Choose>
