--- a/samples/Playground/Directory.Build.props
+++ b/samples/Playground/Directory.Build.props
@@ -8,6 +8,7 @@
 		<WarningsAsErrors>enable</WarningsAsErrors>
 		<NoWarn>$(NoWarn);NU5104;CS1591;MSB3277;XA0101;CS8785;CS8669</NoWarn>
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+		<UnoEnableXamlFuzzyMatching>false</UnoEnableXamlFuzzyMatching>
 	</PropertyGroup>
 
 	<PropertyGroup>
