chore: added telerik on maui controls
(cherry picked from commit aeadee044adaa5a85ad2ffb4ac9ef749eefa09f7)

--- a/samples/MauiProjects/MauiApp1/MauiApp1.csproj
+++ b/samples/MauiProjects/MauiApp1/MauiApp1.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" />
+		<PackageReference Include="Telerik.UI.for.Maui" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
