chore: added SkiaShpar files on the csproj
(cherry picked from commit c48cce53afffad5c26c624bb630e79b65d9dbb06)

--- a/samples/MauiEmbedding/MauiEmbedding.Mobile/MauiEmbedding.Mobile.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.Mobile/MauiEmbedding.Mobile.csproj
@@ -57,6 +57,11 @@
 				<!-- https://github.com/xamarin/xamarin-macios/issues/14812 -->
 				<MtouchExtraArgs>$(MtouchExtraArgs) --marshal-objectivec-exceptions:disable</MtouchExtraArgs>
 			</PropertyGroup>
+			<ItemGroup>
+				<PackageReference Include="SkiaSharp" />
+				<PackageReference Include="SkiaSharp.Views.Uno.WinUI" />
+				<PackageReference Include="SkiaSharp.NativeAssets.iOS" />
+			</ItemGroup>
 		</When>
 		<When Condition="$(IsMacCatalyst)">
 			<PropertyGroup>
