--- a/samples/MauiProjects/MauiApp1/MauiApp1.csproj
+++ b/samples/MauiProjects/MauiApp1/MauiApp1.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Esri.ArcGISRuntime.Maui" Version="200.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" />
 		<PackageReference Include="Telerik.UI.for.Maui" Version="6.0.0" />
 	</ItemGroup>
