--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -20,5 +20,6 @@
     <PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.0.0-dev.1380" />
     <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
     <PackageVersion Include="Telerik.UI.for.Maui" Version="5.1.0" Condition="$(_UseTelerik)" />
+	<PackageVersion Include="Esri.ArcGISRuntime.Maui" Version="200.1.0" />
   </ItemGroup>
 </Project>
