--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -4,9 +4,9 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
     <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
-    <PackageVersion Include="SkiaSharp" Version="2.88.4-pr.2529.2" />
-    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-pr.2529.2" />
-    <PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.4-pr.2529.2" />
+    <PackageVersion Include="SkiaSharp" Version="2.88.4-preview.89" />
+    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.4-preview.89" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.4-preview.89" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
     <PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.262" />
