fix: Direct reference to Uno.WinUI for extension packages

--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
@@ -48,7 +48,7 @@
 		<TargetPlatformVersion>15.4</TargetPlatformVersion>
 	</PropertyGroup>
 
-	<ItemGroup  Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup >
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 
