--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Skia.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Skia.csproj
@@ -14,7 +14,7 @@
 	</PropertyGroup>
 
 
-	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 
