--- a/src/Uno.Extensions.Logging/Uno.Extensions.Logging.WinUI.Skia.csproj
+++ b/src/Uno.Extensions.Logging/Uno.Extensions.Logging.WinUI.Skia.csproj
@@ -10,7 +10,7 @@
 		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 
