--- a/src/Uno.Extensions.Reactive.UI/Uno.Extensions.Reactive.WinUI.csproj
+++ b/src/Uno.Extensions.Reactive.UI/Uno.Extensions.Reactive.WinUI.csproj
@@ -16,7 +16,7 @@
 
 	<Import Project="common.props" />
 
-	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 
