--- a/src/Uno.Extensions.Authentication.Oidc/Uno.Extensions.Authentication.Oidc.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.Oidc/Uno.Extensions.Authentication.Oidc.WinUI.csproj
@@ -15,7 +15,7 @@
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
 	</PropertyGroup>
 
-	<ItemGroup  Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup >
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 	
