--- a/src/Uno.Extensions.Core.UI/Uno.Extensions.Core.WinUI.csproj
+++ b/src/Uno.Extensions.Core.UI/Uno.Extensions.Core.WinUI.csproj
@@ -12,7 +12,7 @@
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 </Project>
