--- a/src/Uno.Extensions.Http.UI/Uno.Extensions.Http.WinUI.csproj
+++ b/src/Uno.Extensions.Http.UI/Uno.Extensions.Http.WinUI.csproj
@@ -7,7 +7,7 @@
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 
