fix: Direct reference to Uno.WinUI for extension packages
(cherry picked from commit 5cbf98e84fb33a39fece8d34b6b62bb8ebe58117)

--- a/src/Uno.Extensions.Logging/Uno.Extensions.Logging.WinUI.Skia.csproj
+++ b/src/Uno.Extensions.Logging/Uno.Extensions.Logging.WinUI.Skia.csproj
@@ -9,7 +9,7 @@
 		<AssemblyName>Uno.Extensions.Logging.WinUI</AssemblyName>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
+	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
 	</ItemGroup>
 
