fix: disabled HotRestart until we get a fix

--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -18,6 +18,7 @@
 		<IsMacCatalyst>false</IsMacCatalyst>
 		<IsWinAppSdk>false</IsWinAppSdk>
 		<_UseTelerik>false</_UseTelerik>
+		<UnoDisableHotRestartHelperGeneration>false</UnoDisableHotRestartHelperGeneration>
 	</PropertyGroup>
 
 	<Choose>
