chore: added context on the DisableMsbuild prop
Co-authored-by: Jérôme Laban <jlaban@gmail.com>

--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -18,6 +18,7 @@
 		<IsMacCatalyst>false</IsMacCatalyst>
 		<IsWinAppSdk>false</IsWinAppSdk>
 		<_UseTelerik>false</_UseTelerik>
+        <!-- Remove after https://github.com/unoplatform/uno/pull/13034 is merged -->
 		<UnoDisableHotRestartHelperGeneration>false</UnoDisableHotRestartHelperGeneration>
 	</PropertyGroup>
 
