chore: Adding wasm target

--- a/samples/MauiEmbedding/MauiEmbedding.Mobile/MauiEmbedding.Mobile.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.Mobile/MauiEmbedding.Mobile.csproj
@@ -22,6 +22,10 @@
 		<!-- Required for C# Hot Reload -->
 		<UseInterpreter Condition="'$(Configuration)' == 'Debug' and $([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'maccatalyst'">True</UseInterpreter>
 		<IsUnoHead>true</IsUnoHead>
+		
+		<!-- TODO: Remove one issue fixed: https://github.com/unoplatform/uno.extensions-private/issues/78 -->
+		<!-- Note that the UnoDisableHotRestartHelperGeneration is inverted -->
+		<UnoDisableHotRestartHelperGeneration>false</UnoDisableHotRestartHelperGeneration>
 	</PropertyGroup>
 
 	<ItemGroup>
