--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -8,12 +8,12 @@
 		<PackageVersion Include="MSTest.TestFramework" Version="2.2.9" />
 		<PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
 		<PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
-		<PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" Condition="$(UseMaui) != 'true'" />
+		<PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"  />
 		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" Condition="$(UseMaui) != 'true'" />
-		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="6.0.1" Condition="$(UseMaui) != 'true'" />
+		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 		<PackageVersion Include="Microsoft.Extensions.Http" Version="6.0.0" Condition="$(UseMaui) != 'true'" />
 		<PackageVersion Include="Microsoft.Extensions.Localization.Abstractions" Version="6.0.4" Condition="$(UseMaui) != 'true'" />
-		<PackageVersion Include="Microsoft.Extensions.Logging" Version="6.0.0" Condition="$(UseMaui) != 'true'" />
+		<PackageVersion Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageVersion Include="Microsoft.Identity.Client" Version="4.47.0" />
 		<PackageVersion Include="Microsoft.Identity.Client.Extensions.Msal" Version="2.22.0" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
