--- a/src/Uno.Extensions.Navigation.UI.Markup/Uno.Extensions.Navigation.WinUI.Markup.csproj
+++ b/src/Uno.Extensions.Navigation.UI.Markup/Uno.Extensions.Navigation.WinUI.Markup.csproj
@@ -12,6 +12,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI.Markup" />
+		<PackageReference Include="Uno.Extensions.Markup.WinUI" PrivateAssets="All" />
 		<PackageReference Include="Uno.Extensions.Markup.Generators" PrivateAssets="All" />
 	</ItemGroup>
 
