chore: Tidy up mauiembedding sample app

--- a/samples/MauiEmbedding/MauiProjects/MauiControlsExternal/MauiControlsExternal.csproj
+++ b/samples/MauiEmbedding/MauiProjects/MauiControlsExternal/MauiControlsExternal.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	 <PropertyGroup>
 		<TargetFrameworks>net7.0;net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
@@ -13,5 +13,26 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
-	</PropertyGroup> 
+	</PropertyGroup>
+
+	 <ItemGroup>
+	   <Compile Update="App.xaml.cs">
+	     <DependentUpon>%(Filename)</DependentUpon>
+	   </Compile>
+	 </ItemGroup>
+
+	 <ItemGroup>
+	   <MauiXaml Update="App.xaml">
+	     <Generator>MSBuild:Compile</Generator>
+	   </MauiXaml>
+	   <MauiXaml Update="EmbeddedControl.xaml">
+	     <Generator>MSBuild:Compile</Generator>
+	   </MauiXaml>
+	   <MauiXaml Update="Styles\Colors.xaml">
+	     <Generator>MSBuild:Compile</Generator>
+	   </MauiXaml>
+	   <MauiXaml Update="Styles\Styles.xaml">
+	     <Generator>MSBuild:Compile</Generator>
+	   </MauiXaml>
+	 </ItemGroup> 
 </Project>
