--- a/samples/MauiEmbedding/Directory.Build.targets
+++ b/samples/MauiEmbedding/Directory.Build.targets
@@ -3,4 +3,7 @@
 		<!-- Removes native usings to avoid Ambiguous reference -->
 		<Using Remove="@(Using->HasMetadata('Platform'))" />
 	</ItemGroup>
+
+	<Import Project="..\..\src\winappsdk-workaround.targets" Condition="exists('..\..\src\winappsdk-workaround.targets')" />
+
 </Project>
